# image-classification-wasmtime-bench

./: .gitignore  Cargo.toml  README.md  run.sh
benches/: bench.rs  wasmtime_run.rs
src/: lib.rs  main.rs
