[package]
name = "wasmtime-float"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
wasm-encoder = "0.201.0"
wasmtime = "19.0.0"

[[bin]]
path = "bin/main.rs"
name = "generate"

[[bin]]
path = "bin/loop.rs"
name = "loop"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "wasmtime_run"
harness = false
